xsl/html: enhance "family-name" with lang/panose1

--- a/pyhwp-tests/hwp5_tests/fixtures/headerfooter.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/headerfooter.html.d/index.xhtml
@@ -29,4 +29,4 @@
   width: 150mm;
   height: 15mm;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="HeaderArea"><p class="Header"><span>Header </span><span>이것은 머리말입니다</span><span class="autonumbering autonumbering-page">1</span><span>.</span>&#13;</p></div><div class="Page"><p class="Normal parashape-9"><span>첫 페이지</span>&#13;</p><p class="Normal parashape-9">&#13;</p></div><div class="FooterArea"><p class="Header"><span>Footer </span><span>이것은 꼬리말입니다.</span>&#13;</p></div></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="HeaderArea"><p class="Header"><span class="lang-en">Header </span><span class="lang-ko">이것은 머리말입니다</span><span class="autonumbering autonumbering-page">1</span><span class="lang-ko">.</span>&#13;</p></div><div class="Page"><p class="Normal parashape-9"><span class="lang-ko">첫 페이지</span>&#13;</p><p class="Normal parashape-9">&#13;</p></div><div class="FooterArea"><p class="Header"><span class="lang-en">Footer </span><span class="lang-ko">이것은 꼬리말입니다.</span>&#13;</p></div></div></div></body></html>
