--- a/pyhwp-tests/hwp5_tests/fixtures/issue144-fields-crossing-lineseg-boundary.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/issue144-fields-crossing-lineseg-boundary.html.d/index.formatted.xhtml
@@ -27,9 +27,9 @@
         <div class="Page">
           <p class="Normal parashape-11">&#13;</p>
           <p class="Normal parashape-11">
-            <span class="charshape-5">gmail g</span>
+            <span class="lang-en charshape-5">gmail g</span>
           </p>
-          <p class="Normal parashape-11"><span class="charshape-5">le</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="lang-en charshape-5">le</span>&#13;</p>
         </div>
       </div>
     </div>
