--- a/pyhwp-tests/hwp5_tests/fixtures/issue144-fields-crossing-lineseg-boundary.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/issue144-fields-crossing-lineseg-boundary.html.d/index.xhtml
@@ -15,4 +15,4 @@
   padding-top: 15mm;
   padding-bottom: 15mm;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-11">&#13;</p><p class="Normal parashape-11"><span class="charshape-5">gmail g</span></p><p class="Normal parashape-11"><span class="charshape-5">le</span>&#13;</p></div></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-11">&#13;</p><p class="Normal parashape-11"><span class="lang-en charshape-5">gmail g</span></p><p class="Normal parashape-11"><span class="lang-en charshape-5">le</span>&#13;</p></div></div></div></body></html>
