--- a/pyhwp-tests/hwp5_tests/fixtures/pagedefs.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/pagedefs.html.d/index.xhtml
@@ -29,4 +29,4 @@
   padding-top: 15mm;
   padding-bottom: 15mm;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1"><span>Section 1: A4 portrait</span>&#13;</p></div></div></div><div class="Section Section-1 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1"><span>Section 2: A4 landscape</span>&#13;</p></div></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1"><span class="lang-en">Section 1: A4 portrait</span>&#13;</p></div></div></div><div class="Section Section-1 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1"><span class="lang-en">Section 2: A4 landscape</span>&#13;</p></div></div></div></body></html>
