--- a/pyhwp-tests/hwp5_tests/fixtures/sample-5017-pics.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/sample-5017-pics.html.d/index.formatted.xhtml
@@ -25,47 +25,47 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-0"><span>글자취급</span><span class="GShapeObjectControl" style="  width: 44.45mm;&#10;  display: inline-block;&#10;"><img src="bindata/BIN000B.jpg" style="  width: 44.45mm;&#10;   height: 26.67mm;&#10;"/></span>&#13;</p>
-          <p class="Normal parashape-0"><span>어울림 (양쪽 본문)</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">글자취급</span><span class="GShapeObjectControl" style="  width: 44.45mm;&#10;  display: inline-block;&#10;"><img src="bindata/BIN000B.jpg" style="  width: 44.45mm;&#10;   height: 26.67mm;&#10;"/></span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">어울림 (양쪽 본문)</span>&#13;</p>
           <div class="GShapeObjectControl" style="  width: 55.84mm;&#10;/* hrelto: column halign: center*/  margin-left: 67.08mm;&#10;">
             <img src="bindata/BIN000B.jpg" style="  width: 55.84mm;&#10;   height: 33.5mm;&#10;"/>
           </div>
-          <p class="Normal parashape-0"><span>어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 </span><span>어울림 어울림 </span><span>어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
-          <p class="Normal parashape-0"><span>어울림 (왼쪽 본문)</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">어울림 어울림 어울림 어울림 어울림 어</span><span class="lang-ko">울림 어울림 어</span><span class="lang-ko">울림 어울림 어울림 어울림 어울림 어울</span><span class="lang-ko">림 어울림 어울</span><span class="lang-ko">림 어울림 어울림 어울림 어울림 어울림 </span><span class="lang-ko">어울림 어울림 </span><span class="lang-ko">어울림 어울림 어울림 어울림 어울림 어</span><span class="lang-ko">울림 어울림 어</span><span class="lang-ko">울림 어울림 어울림 어울림 어울림 어울</span><span class="lang-ko">림 어울림 어울</span><span class="lang-ko">림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span class="lang-ko">림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">어울림 (왼쪽 본문)</span>&#13;</p>
           <div class="GShapeObjectControl" style="  width: 55.84mm;&#10;/* hrelto: paragraph halign: right*/  margin-left: 84.16mm;&#10;">
             <img src="bindata/BIN000B.jpg" style="  width: 55.84mm;&#10;   height: 33.5mm;&#10;"/>
           </div>
-          <p class="Normal parashape-0"><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 </span><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
-          <p class="Normal parashape-0"><span>어울림 (오른쪽 본문)</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span class="lang-ko">림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span class="lang-ko">울림 어울림 어울림 어울림 어울림 어울림 어울림 </span><span class="lang-ko">어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span class="lang-ko">림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span class="lang-ko">울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span class="lang-ko">울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">어울림 (오른쪽 본문)</span>&#13;</p>
           <div class="GShapeObjectControl" style="  width: 55.84mm;&#10;/* hrelto: paragraph halign: left*/  margin-left: 10mm;&#10;">
             <img src="bindata/BIN000B.jpg" style="  width: 55.84mm;&#10;   height: 33.5mm;&#10;"/>
           </div>
-          <p class="Normal parashape-0"><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 </span><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
-          <p class="Normal parashape-0"><span>자리차지 (왼쪽정렬)</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span class="lang-ko">림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span class="lang-ko">울림 어울림 어울림 어울림 어울림 어울림 어울림 </span><span class="lang-ko">어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span class="lang-ko">림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span class="lang-ko">울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span class="lang-ko">울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">자리차지 (왼쪽정렬)</span>&#13;</p>
           <div class="GShapeObjectControl" style="  width: 56.93mm;&#10;/* hrelto: column halign: left*/  margin-left: 10mm;&#10;">
             <img src="bindata/BIN000B.jpg" style="  width: 56.93mm;&#10;   height: 34.16mm;&#10;"/>
           </div>
-          <p class="Normal parashape-0"><span>자리차지 (오른쪽정렬)</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">자리차지 (오른쪽정렬)</span>&#13;</p>
           <div class="GShapeObjectControl" style="  width: 56.93mm;&#10;/* hrelto: column halign: right*/  margin-left: 83.07mm;&#10;">
             <img src="bindata/BIN000B.jpg" style="  width: 56.93mm;&#10;   height: 34.16mm;&#10;"/>
           </div>
-          <p class="Normal parashape-0"><span>자리차지 (가운데정렬)</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">자리차지 (가운데정렬)</span>&#13;</p>
           <div class="GShapeObjectControl" style="  width: 56.93mm;&#10;/* hrelto: column halign: center*/  margin-left: 36.53mm;&#10;">
             <img src="bindata/BIN000B.jpg" style="  width: 56.93mm;&#10;   height: 34.16mm;&#10;"/>
           </div>
-          <p class="Normal parashape-0"><span>자리차지 (안쪽정렬)</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">자리차지 (안쪽정렬)</span>&#13;</p>
           <div class="GShapeObjectControl" style="  width: 56.93mm;&#10;/* hrelto: column halign: inside*/">
             <img src="bindata/BIN000C.jpg" style="  width: 56.93mm;&#10;   height: 34.16mm;&#10;"/>
           </div>
-          <p class="Normal parashape-0"><span>자리차지 (바깥쪽정렬)</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">자리차지 (바깥쪽정렬)</span>&#13;</p>
           <div class="GShapeObjectControl" style="  width: 56.93mm;&#10;/* hrelto: column halign: outside*/">
             <img src="bindata/BIN000C.jpg" style="  width: 56.93mm;&#10;   height: 34.16mm;&#10;"/>
           </div>
-          <p class="Normal parashape-0"><span>글뒤로</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">글뒤로</span>&#13;</p>
           <div class="GShapeObjectControl" style="  width: 58.68mm;&#10;/* hrelto: column halign: left*/  margin-left: 0mm;&#10;">
             <img src="bindata/BIN000B.jpg" style="  width: 58.68mm;&#10;   height: 35.21mm;&#10;"/>
           </div>
-          <p class="Normal parashape-0"><span>글 앞으로</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">글 앞으로</span>&#13;</p>
           <div class="GShapeObjectControl" style="  width: 48.17mm;&#10;/* hrelto: column halign: left*/  margin-left: 26.28mm;&#10;">
             <img src="bindata/BIN000B.jpg" style="  width: 48.17mm;&#10;   height: 28.9mm;&#10;"/>
           </div>
