--- a/pyhwp-tests/hwp5_tests/fixtures/footnote-endnote.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/footnote-endnote.html.d/index.xhtml
@@ -15,4 +15,4 @@
   padding-top: 15mm;
   padding-bottom: 15mm;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-11"><span>각주참조</span>&#13;</p><p class="Normal parashape-11"><span>미주참조</span>&#13;</p></div></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-11"><span class="lang-ko">각주참조</span>&#13;</p><p class="Normal parashape-11"><span class="lang-ko">미주참조</span>&#13;</p></div></div></div></body></html>
