--- a/pyhwp-tests/hwp5_tests/fixtures/lists.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/lists.html.d/index.formatted.xhtml
@@ -39,76 +39,76 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-11"><span>글머리표</span>&#13;</p>
-          <p class="Normal parashape-12 Bullet-1"><span>1</span>&#13;</p>
-          <p class="Normal parashape-12 Bullet-1"><span>2</span>&#13;</p>
-          <p class="Normal parashape-12 Bullet-1"><span>3</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="lang-ko">글머리표</span>&#13;</p>
+          <p class="Normal parashape-12 Bullet-1"><span class="lang-ko">1</span>&#13;</p>
+          <p class="Normal parashape-12 Bullet-1"><span class="lang-ko">2</span>&#13;</p>
+          <p class="Normal parashape-12 Bullet-1"><span class="lang-ko">3</span>&#13;</p>
           <p class="Normal parashape-11"/>
-          <p class="Normal parashape-11"><span>글머리표 두 번째</span>&#13;</p>
-          <p class="Normal parashape-14 Bullet-2"><span>1</span>&#13;</p>
-          <p class="Normal parashape-14 Bullet-2"><span>2</span>&#13;</p>
-          <p class="Normal parashape-14 Bullet-2"><span>3</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="lang-ko">글머리표 두 번째</span>&#13;</p>
+          <p class="Normal parashape-14 Bullet-2"><span class="lang-ko">1</span>&#13;</p>
+          <p class="Normal parashape-14 Bullet-2"><span class="lang-ko">2</span>&#13;</p>
+          <p class="Normal parashape-14 Bullet-2"><span class="lang-ko">3</span>&#13;</p>
           <p class="Normal parashape-11"/>
-          <p class="Normal parashape-11"><span>문단번호</span>&#13;</p>
-          <p class="Normal parashape-18 Bullet-3"><span>1</span>&#13;</p>
-          <p class="Normal parashape-18 Bullet-3"><span>2</span>&#13;</p>
-          <p class="Normal parashape-19 Bullet-3"><span>2-1</span>&#13;</p>
-          <p class="Normal parashape-18 Bullet-3"><span>3</span>&#13;</p>
-          <p class="Normal parashape-19 Bullet-3"><span>3-1</span>&#13;</p>
-          <p class="Normal parashape-19 Bullet-3"><span>3-2</span>&#13;</p>
-          <p class="Normal parashape-20 Bullet-3"><span>3-2-1</span>&#13;</p>
-          <p class="Normal parashape-20 Bullet-3"><span>3-2-2</span>&#13;</p>
-          <p class="Normal parashape-20 Bullet-3"><span>3-2-3</span>&#13;</p>
-          <p class="Normal parashape-18 Bullet-3"><span>4</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="lang-ko">문단번호</span>&#13;</p>
+          <p class="Normal parashape-18 Bullet-3"><span class="lang-ko">1</span>&#13;</p>
+          <p class="Normal parashape-18 Bullet-3"><span class="lang-ko">2</span>&#13;</p>
+          <p class="Normal parashape-19 Bullet-3"><span class="lang-ko">2-1</span>&#13;</p>
+          <p class="Normal parashape-18 Bullet-3"><span class="lang-ko">3</span>&#13;</p>
+          <p class="Normal parashape-19 Bullet-3"><span class="lang-ko">3-1</span>&#13;</p>
+          <p class="Normal parashape-19 Bullet-3"><span class="lang-ko">3-2</span>&#13;</p>
+          <p class="Normal parashape-20 Bullet-3"><span class="lang-ko">3-2-1</span>&#13;</p>
+          <p class="Normal parashape-20 Bullet-3"><span class="lang-ko">3-2-2</span>&#13;</p>
+          <p class="Normal parashape-20 Bullet-3"><span class="lang-ko">3-2-3</span>&#13;</p>
+          <p class="Normal parashape-18 Bullet-3"><span class="lang-ko">4</span>&#13;</p>
           <p class="Normal parashape-11"/>
-          <p class="Normal parashape-11"><span>문단번호 두 번째 (번호 이어짐)</span>&#13;</p>
-          <p class="Normal parashape-18 Bullet-3"><span>5</span>&#13;</p>
-          <p class="Normal parashape-19 Bullet-3"><span>5-1</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="lang-ko">문단번호 두 번째 (번호 이어짐)</span>&#13;</p>
+          <p class="Normal parashape-18 Bullet-3"><span class="lang-ko">5</span>&#13;</p>
+          <p class="Normal parashape-19 Bullet-3"><span class="lang-ko">5-1</span>&#13;</p>
           <p class="Normal parashape-13"/>
-          <p class="Normal parashape-13"><span>문단번호 세 번째 (새 번호)</span>&#13;</p>
-          <p class="Normal parashape-15 Bullet-1"><span>1</span>&#13;</p>
-          <p class="Normal parashape-15 Bullet-1"><span>2</span>&#13;</p>
-          <p class="Normal parashape-16 Bullet-1"><span>2-1</span>&#13;</p>
-          <p class="Normal parashape-15 Bullet-1"><span>3</span>&#13;</p>
-          <p class="Normal parashape-16 Bullet-1"><span>3-1</span>&#13;</p>
-          <p class="Normal parashape-16 Bullet-1"><span>3-2</span>&#13;</p>
-          <p class="Normal parashape-17 Bullet-1"><span>3-2-1</span>&#13;</p>
-          <p class="Normal parashape-17 Bullet-1"><span>3-2-2</span>&#13;</p>
-          <p class="Normal parashape-17 Bullet-1"><span>3-2-3</span>&#13;</p>
-          <p class="Normal parashape-15 Bullet-1"><span>4</span>&#13;</p>
-          <p class="Normal"><span>개요</span>&#13;</p>
-          <p class="Outline-1"><span>1</span>&#13;</p>
-          <p class="Outline-1"><span>2</span>&#13;</p>
-          <p class="Outline-2"><span>2-1</span>&#13;</p>
-          <p class="Outline-1"><span>3</span>&#13;</p>
-          <p class="Outline-2"><span>3-1</span>&#13;</p>
-          <p class="Outline-2"><span>3-2</span>&#13;</p>
-          <p class="Outline-3"><span>3-2-1</span>&#13;</p>
-          <p class="Outline-3"><span>3-2-2</span>&#13;</p>
-          <p class="Outline-3"><span>3-2-3</span>&#13;</p>
-          <p class="Outline-1"><span>4</span>&#13;</p>
+          <p class="Normal parashape-13"><span class="lang-ko">문단번호 세 번째 (새 번호)</span>&#13;</p>
+          <p class="Normal parashape-15 Bullet-1"><span class="lang-ko">1</span>&#13;</p>
+          <p class="Normal parashape-15 Bullet-1"><span class="lang-ko">2</span>&#13;</p>
+          <p class="Normal parashape-16 Bullet-1"><span class="lang-ko">2-1</span>&#13;</p>
+          <p class="Normal parashape-15 Bullet-1"><span class="lang-ko">3</span>&#13;</p>
+          <p class="Normal parashape-16 Bullet-1"><span class="lang-ko">3-1</span>&#13;</p>
+          <p class="Normal parashape-16 Bullet-1"><span class="lang-ko">3-2</span>&#13;</p>
+          <p class="Normal parashape-17 Bullet-1"><span class="lang-ko">3-2-1</span>&#13;</p>
+          <p class="Normal parashape-17 Bullet-1"><span class="lang-ko">3-2-2</span>&#13;</p>
+          <p class="Normal parashape-17 Bullet-1"><span class="lang-ko">3-2-3</span>&#13;</p>
+          <p class="Normal parashape-15 Bullet-1"><span class="lang-ko">4</span>&#13;</p>
+          <p class="Normal"><span class="lang-ko">개요</span>&#13;</p>
+          <p class="Outline-1"><span class="lang-ko">1</span>&#13;</p>
+          <p class="Outline-1"><span class="lang-ko">2</span>&#13;</p>
+          <p class="Outline-2"><span class="lang-ko">2-1</span>&#13;</p>
+          <p class="Outline-1"><span class="lang-ko">3</span>&#13;</p>
+          <p class="Outline-2"><span class="lang-ko">3-1</span>&#13;</p>
+          <p class="Outline-2"><span class="lang-ko">3-2</span>&#13;</p>
+          <p class="Outline-3"><span class="lang-ko">3-2-1</span>&#13;</p>
+          <p class="Outline-3"><span class="lang-ko">3-2-2</span>&#13;</p>
+          <p class="Outline-3"><span class="lang-ko">3-2-3</span>&#13;</p>
+          <p class="Outline-1"><span class="lang-ko">4</span>&#13;</p>
           <p class="Normal"/>
-          <p class="Normal"><span>개요 두 번째 (번호 이어짐)</span>&#13;</p>
-          <p class="Outline-1"><span>5</span>&#13;</p>
-          <p class="Outline-2"><span>5-1</span>&#13;</p>
+          <p class="Normal"><span class="lang-ko">개요 두 번째 (번호 이어짐)</span>&#13;</p>
+          <p class="Outline-1"><span class="lang-ko">5</span>&#13;</p>
+          <p class="Outline-2"><span class="lang-ko">5-1</span>&#13;</p>
           <p class="Normal"/>
-          <p class="Normal"><span>개요 세 번째 (새 번호)</span>&#13;</p>
+          <p class="Normal"><span class="lang-ko">개요 세 번째 (새 번호)</span>&#13;</p>
         </div>
       </div>
     </div>
     <div class="Section Section-1 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Outline-1"><span>1</span>&#13;</p>
-          <p class="Outline-1"><span>2</span>&#13;</p>
-          <p class="Outline-2"><span>2-1</span>&#13;</p>
-          <p class="Outline-1"><span>3</span>&#13;</p>
-          <p class="Outline-2"><span>3-1</span>&#13;</p>
-          <p class="Outline-2"><span>3-2</span>&#13;</p>
-          <p class="Outline-3"><span>3-2-1</span>&#13;</p>
-          <p class="Outline-3"><span>3-2-2</span>&#13;</p>
-          <p class="Outline-3"><span>3-2-3</span>&#13;</p>
-          <p class="Outline-1"><span>4</span>&#13;</p>
+          <p class="Outline-1"><span class="lang-ko">1</span>&#13;</p>
+          <p class="Outline-1"><span class="lang-ko">2</span>&#13;</p>
+          <p class="Outline-2"><span class="lang-ko">2-1</span>&#13;</p>
+          <p class="Outline-1"><span class="lang-ko">3</span>&#13;</p>
+          <p class="Outline-2"><span class="lang-ko">3-1</span>&#13;</p>
+          <p class="Outline-2"><span class="lang-ko">3-2</span>&#13;</p>
+          <p class="Outline-3"><span class="lang-ko">3-2-1</span>&#13;</p>
+          <p class="Outline-3"><span class="lang-ko">3-2-2</span>&#13;</p>
+          <p class="Outline-3"><span class="lang-ko">3-2-3</span>&#13;</p>
+          <p class="Outline-1"><span class="lang-ko">4</span>&#13;</p>
         </div>
       </div>
     </div>
