--- a/pyhwp-tests/hwp5_tests/fixtures/multicolumns-in-common-controls.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/multicolumns-in-common-controls.html.d/index.formatted.xhtml
@@ -28,18 +28,18 @@
           <p class="Normal parashape-11">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-2" style="  width: 148mm;&#10;/* hrelto: column halign: left*/  margin-left: 1mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
-              <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">1</span><span> </span>&#13;</p>
+              <p class="Normal"><span class="lang-ko">표 </span><span class="autonumbering autonumbering-table">1</span><span class="lang-ko"> </span>&#13;</p>
             </caption>
             <tr>
               <td class="borderfill-2" colspan="1" rowspan="1" style="  width: 148mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
-                <p class="Normal parashape-12"><span>다단 다단 다단 다단 다단 다단 다단 다단 </span><span>다단 다단 다단 다단 다단 다단 다단 다단 </span>&#13;</p>
+                <p class="Normal parashape-12"><span class="lang-ko">다단 다단 다단 다단 다단 다단 다단 다단 </span><span class="lang-ko">다단 다단 다단 다단 다단 다단 다단 다단 </span>&#13;</p>
               </td>
             </tr>
           </table>
           <p class="Normal parashape-11">&#13;</p>
           <div class="GShapeObjectControl" style="  width: 71.76mm;&#10;/* hrelto: paper halign: left*/  margin-left: 6.31mm;&#10;">
-            <p class="Normal"><span>그림 </span><span class="autonumbering autonumbering-picture">1</span><span> </span>&#13;</p>
-            <p class="Normal parashape-12"><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span>&#13;</p>
+            <p class="Normal"><span class="lang-ko">그림 </span><span class="autonumbering autonumbering-picture">1</span><span class="lang-ko"> </span>&#13;</p>
+            <p class="Normal parashape-12"><span class="lang-ko">다단 다단 다단 </span><span class="lang-ko">다단 다단 다단 </span><span class="lang-ko">다단 다단 다단 </span><span class="lang-ko">다단 다단 다단 </span><span class="lang-ko">다단 다단 다단 </span><span class="lang-ko">다단 다단 다단 </span><span class="lang-ko">다단 다단 다단 </span><span class="lang-ko">다단 다단 다단 </span>&#13;</p>
           </div>
         </div>
       </div>
