--- a/pyhwp-tests/hwp5_tests/fixtures/multicolumns-widths.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/multicolumns-widths.html.d/index.formatted.xhtml
@@ -25,9 +25,9 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-11"><span>1</span>&#13;</p>
-          <p class="Normal parashape-11"><span>2</span>&#13;</p>
-          <p class="Normal parashape-11"><span>3</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="lang-ko">1</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="lang-ko">2</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="lang-ko">3</span>&#13;</p>
         </div>
       </div>
     </div>
