--- a/pyhwp-tests/hwp5_tests/fixtures/pagedefs.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/pagedefs.html.d/index.formatted.xhtml
@@ -39,14 +39,14 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><span>Section 1: A4 portrait</span>&#13;</p>
+          <p class="Normal parashape-1"><span class="lang-en">Section 1: A4 portrait</span>&#13;</p>
         </div>
       </div>
     </div>
     <div class="Section Section-1 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-1"><span>Section 2: A4 landscape</span>&#13;</p>
+          <p class="Normal parashape-1"><span class="lang-en">Section 2: A4 landscape</span>&#13;</p>
         </div>
       </div>
     </div>
