--- a/pyhwp-tests/hwp5_tests/fixtures/paragraph-split-page.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/paragraph-split-page.html.d/index.formatted.xhtml
@@ -25,9 +25,9 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal"><span>가나다</span>&#13;</p>
-          <p class="Normal"><span>라마바</span>&#13;</p>
-          <p class="Normal"><span>new page</span>&#13;</p>
+          <p class="Normal"><span class="lang-ko">가나다</span>&#13;</p>
+          <p class="Normal"><span class="lang-ko">라마바</span>&#13;</p>
+          <p class="Normal"><span class="lang-en">new page</span>&#13;</p>
         </div>
       </div>
     </div>
