--- a/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/sample-5017.html.d/index.formatted.xhtml
@@ -25,17 +25,17 @@
     <div class="Section Section-0 Paper">
       <div class="HeaderPageFooter">
         <div class="Page">
-          <p class="Normal parashape-0"><span class="charshape-7">한글 </span><span class="charshape-8">2005</span><span class="charshape-7"> </span><span class="charshape-9">예제</span><span class="charshape-7"> 파일입니다.</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko charshape-7">한글 </span><span class="lang-ko charshape-8">2005</span><span class="lang-ko charshape-7"> </span><span class="lang-ko charshape-9">예제</span><span class="lang-ko charshape-7"> 파일입니다.</span>&#13;</p>
           <p class="Normal parashape-0"/>
-          <p class="Header parashape-11"><span>머리말입니다</span>&#13;</p>
+          <p class="Header parashape-11"><span class="lang-ko">머리말입니다</span>&#13;</p>
           <p class="Normal parashape-0"/>
-          <p class="Body"><span>본문 </span><span class="charshape-5">내용</span><span>입니다. 본 문서는 ᄒᆞᆫ글 워드 프로세서의 파일 저장 형식 중, ᄒᆞᆫ글 2002</span><span> 이후 제품에서 사용되는 ᄒᆞᆫ글 문서 파일 형식 5.0 및 ᄒᆞᆫ글 97 문서 파일 형식, </span><span>HWPML</span><span>에 관하여 설명한다.</span>&#13;</p>
-          <p class="Body"><span>표</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-4" style="  width: 142.71mm;&#10;  border-collapse: collapse;&#10;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span>A0</span>&#13;</p></td><td class="borderfill-3" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span>B0</span>&#13;</p></td></tr><tr><td class="borderfill-6" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span>A1</span>&#13;</p></td><td class="borderfill-5" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span>B10</span>&#13;</p><p class="Normal"><span>B11</span>&#13;</p></td></tr></table></span><span>표</span><span class="charshape-5">끝</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-1" style="  width: 143.01mm;&#10;  border-collapse: collapse;&#10;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 143.01mm;&#10;  height: 14.51mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span>table2</span>&#13;</p></td></tr></table></span>&#13;</p>
+          <p class="Body"><span class="lang-ko">본문 </span><span class="lang-ko charshape-5">내용</span><span class="lang-ko">입니다. 본 문서는 ᄒᆞᆫ글 워드 프로세서의 파일 저장 형식 중, ᄒᆞᆫ글 2002</span><span class="lang-ko"> 이후 제품에서 사용되는 ᄒᆞᆫ글 문서 파일 형식 5.0 및 ᄒᆞᆫ글 97 문서 파일 형식, </span><span class="lang-en">HWPML</span><span class="lang-ko">에 관하여 설명한다.</span>&#13;</p>
+          <p class="Body"><span class="lang-ko">표</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-4" style="  width: 142.71mm;&#10;  border-collapse: collapse;&#10;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span class="lang-en">A0</span>&#13;</p></td><td class="borderfill-3" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span class="lang-en">B0</span>&#13;</p></td></tr><tr><td class="borderfill-6" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span class="lang-en">A1</span>&#13;</p></td><td class="borderfill-5" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span class="lang-en">B10</span>&#13;</p><p class="Normal"><span class="lang-en">B11</span>&#13;</p></td></tr></table></span><span class="lang-ko">표</span><span class="lang-ko charshape-5">끝</span><span class="TableControl" style="  display: inline-block;&#10;"><table cellspacing="0" class="borderfill-1" style="  width: 143.01mm;&#10;  border-collapse: collapse;&#10;"><tr><td class="borderfill-1" colspan="1" rowspan="1" style="  width: 143.01mm;&#10;  height: 14.51mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;"><p class="Normal"><span class="lang-en">table2</span>&#13;</p></td></tr></table></span>&#13;</p>
           <p class="Body">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 142.71mm;&#10;/* hrelto: paragraph halign: left*/  margin-left: 6.29mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
-              <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">3</span><span> 2x2</span><span>짜리표</span>&#13;</p>
-              <p class="Normal"><span>가나다</span>&#13;</p>
+              <p class="Normal"><span class="lang-ko">표 </span><span class="autonumbering autonumbering-table">3</span><span class="lang-en"> 2x2</span><span class="lang-ko">짜리표</span>&#13;</p>
+              <p class="Normal"><span class="lang-ko">가나다</span>&#13;</p>
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 71.36mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
@@ -54,16 +54,16 @@
               </td>
             </tr>
           </table>
-          <p class="Body"><span>다음 문단</span>&#13;</p>
+          <p class="Body"><span class="lang-ko">다음 문단</span>&#13;</p>
           <p class="Body"/>
-          <p class="Body"><span>본 </span><span class="charshape-6">문서</span><span>는 먼저 ᄒᆞᆫ글 문서 파일 형식 5.0에 관하여 설명한 후, ᄒᆞᆫ글 97 </span><span>문서 파일 형식, </span><span>HWPML</span><span>에 관하여 설명한다. 각 형식에 대한 설명은 문서 파일 형식 내</span><span>의 주요한 자료 형식 및 파일 구조, 레코드 구조에 대해서 설명한다.</span>&#13;</p>
+          <p class="Body"><span class="lang-ko">본 </span><span class="lang-ko charshape-6">문서</span><span class="lang-ko">는 먼저 ᄒᆞᆫ글 문서 파일 형식 5.0에 관하여 설명한 후, ᄒᆞᆫ글 97 </span><span class="lang-ko">문서 파일 형식, </span><span class="lang-en">HWPML</span><span class="lang-ko">에 관하여 설명한다. 각 형식에 대한 설명은 문서 파일 형식 내</span><span class="lang-ko">의 주요한 자료 형식 및 파일 구조, 레코드 구조에 대해서 설명한다.</span>&#13;</p>
           <p class="Normal parashape-0">&#13;</p>
           <div class="GShapeObjectControl" style="  width: 57.68mm;&#10;/* hrelto: column halign: left*/  margin-left: 39.42mm;&#10;">
             <img src="bindata/BIN0002.jpg" style="  width: 57.68mm;&#10;   height: 34.61mm;&#10;"/>
           </div>
-          <p class="Endnote parashape-12"><span>미주입니다.</span>&#13;</p>
-          <p class="Footnote parashape-14"><span>이건 각주이지요.</span>&#13;</p>
-          <p class="Normal parashape-0"><span>다음 페이지</span><span class="GShapeObjectControl" style="  width: 4.23mm;&#10;  display: inline-block;&#10;"><img src="bindata/BIN0003.png" style="  width: 4.23mm;&#10;   height: 4.23mm;&#10;"/></span>&#13;</p>
+          <p class="Endnote parashape-12"><span class="lang-ko">미주입니다.</span>&#13;</p>
+          <p class="Footnote parashape-14"><span class="lang-ko">이건 각주이지요.</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="lang-ko">다음 페이지</span><span class="GShapeObjectControl" style="  width: 4.23mm;&#10;  display: inline-block;&#10;"><img src="bindata/BIN0003.png" style="  width: 4.23mm;&#10;   height: 4.23mm;&#10;"/></span>&#13;</p>
         </div>
       </div>
     </div>
