--- a/pyhwp-tests/hwp5_tests/fixtures/tabdef.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/tabdef.html.d/index.formatted.xhtml
@@ -26,13 +26,13 @@
       <div class="HeaderPageFooter">
         <div class="Page">
           <p class="Normal parashape-1">			&#13;</p>
-          <p class="Normal parashape-13"><span>L</span><span>L</span><span>L</span>&#13;</p>
-          <p class="Normal parashape-12"><span>R</span><span>R</span><span>R</span>&#13;</p>
-          <p class="Normal parashape-14"><span>C</span><span>C</span><span>C</span>&#13;</p>
-          <p class="Normal parashape-15"><span>M</span><span>M</span><span>M</span>&#13;</p>
-          <p class="Normal parashape-16"><span>L</span><span>L</span><span>L</span>&#13;</p>
-          <p class="Normal parashape-17"><span>E</span><span>E</span>&#13;</p>
-          <p class="Normal parashape-18"><span>I</span><span>I</span><span>I</span>&#13;</p>
+          <p class="Normal parashape-13"><span class="lang-en">L</span><span class="lang-en">L</span><span class="lang-en">L</span>&#13;</p>
+          <p class="Normal parashape-12"><span class="lang-en">R</span><span class="lang-en">R</span><span class="lang-en">R</span>&#13;</p>
+          <p class="Normal parashape-14"><span class="lang-en">C</span><span class="lang-en">C</span><span class="lang-en">C</span>&#13;</p>
+          <p class="Normal parashape-15"><span class="lang-en">M</span><span class="lang-en">M</span><span class="lang-en">M</span>&#13;</p>
+          <p class="Normal parashape-16"><span class="lang-en">L</span><span class="lang-en">L</span><span class="lang-en">L</span>&#13;</p>
+          <p class="Normal parashape-17"><span class="lang-en">E</span><span class="lang-en">E</span>&#13;</p>
+          <p class="Normal parashape-18"><span class="lang-en">I</span><span class="lang-en">I</span><span class="lang-en">I</span>&#13;</p>
         </div>
       </div>
     </div>
