--- a/pyhwp-tests/hwp5_tests/fixtures/table-caption.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/table-caption.html.d/index.formatted.xhtml
@@ -28,7 +28,7 @@
           <p class="Normal parashape-1">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: left*/  margin-left: 10mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="  caption-side: top;&#10;  margin-bottom: 3mm;&#10;  width: 30mm;&#10;">
-              <p class="Normal parashape-12"><span>표 </span><span class="autonumbering autonumbering-table">1</span><span> 위 캡션</span>&#13;</p>
+              <p class="Normal parashape-12"><span class="lang-ko">표 </span><span class="autonumbering autonumbering-table">1</span><span class="lang-ko"> 위 캡션</span>&#13;</p>
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
@@ -39,7 +39,7 @@
           <p class="Normal parashape-1">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: left*/  margin-left: 10mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
-              <p class="Normal parashape-12"><span>표 </span><span class="autonumbering autonumbering-table">2</span><span> 아래 캡션</span>&#13;</p>
+              <p class="Normal parashape-12"><span class="lang-ko">표 </span><span class="autonumbering autonumbering-table">2</span><span class="lang-ko"> 아래 캡션</span>&#13;</p>
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
@@ -50,7 +50,7 @@
           <p class="Normal parashape-1">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: left*/  margin-left: 10mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="/* not supported @position: left */&#10;">
-              <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">3</span><span> 왼쪽</span>&#13;</p>
+              <p class="Normal"><span class="lang-ko">표 </span><span class="autonumbering autonumbering-table">3</span><span class="lang-ko"> 왼쪽</span>&#13;</p>
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
@@ -61,7 +61,7 @@
           <p class="Normal parashape-1">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: left*/  margin-left: 10mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="/* not supported @position: right */&#10;">
-              <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">4</span><span> 오른쪽</span>&#13;</p>
+              <p class="Normal"><span class="lang-ko">표 </span><span class="autonumbering autonumbering-table">4</span><span class="lang-ko"> 오른쪽</span>&#13;</p>
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
@@ -72,7 +72,7 @@
           <p class="Normal parashape-1">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: left*/  margin-left: 10mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="/* not supported @position: left */&#10;">
-              <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">5</span><span> 왼쪽 위</span>&#13;</p>
+              <p class="Normal"><span class="lang-ko">표 </span><span class="autonumbering autonumbering-table">5</span><span class="lang-ko"> 왼쪽 위</span>&#13;</p>
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
@@ -83,7 +83,7 @@
           <p class="Normal parashape-1">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: left*/  margin-left: 10mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="/* not supported @position: right */&#10;">
-              <p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">6</span><span> 오른쪽 아래</span>&#13;</p>
+              <p class="Normal"><span class="lang-ko">표 </span><span class="autonumbering autonumbering-table">6</span><span class="lang-ko"> 오른쪽 아래</span>&#13;</p>
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
@@ -94,8 +94,8 @@
           <p class="Normal parashape-1">&#13;</p>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: left*/  margin-left: 10mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
-              <p class="Normal parashape-12"><span>표 </span><span class="autonumbering autonumbering-table">7</span><span> 여백까지 확대</span>&#13;</p>
-              <p class="Normal parashape-12"><span>------------------------------------------</span>&#13;</p>
+              <p class="Normal parashape-12"><span class="lang-ko">표 </span><span class="autonumbering autonumbering-table">7</span><span class="lang-ko"> 여백까지 확대</span>&#13;</p>
+              <p class="Normal parashape-12"><span class="lang-ko">------------------------------------------</span>&#13;</p>
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
@@ -105,8 +105,8 @@
           </table>
           <table cellspacing="0" class="TableControl borderfill-1" style="  width: 74mm;&#10;/* hrelto: column halign: left*/  margin-left: 10mm;&#10;  border-collapse: collapse;&#10;">
             <caption class="TableCaption" style="  caption-side: bottom;&#10;  margin-top: 3mm;&#10;  width: 30mm;&#10;">
-              <p class="Normal parashape-12"><span>표 </span><span class="autonumbering autonumbering-table">8</span><span> 한 줄로 입력</span>&#13;</p>
-              <p class="Normal parashape-12"><span>------------------------------------------</span>&#13;</p>
+              <p class="Normal parashape-12"><span class="lang-ko">표 </span><span class="autonumbering autonumbering-table">8</span><span class="lang-ko"> 한 줄로 입력</span>&#13;</p>
+              <p class="Normal parashape-12"><span class="lang-ko">------------------------------------------</span>&#13;</p>
             </caption>
             <tr>
               <td class="borderfill-1" colspan="1" rowspan="1" style="  width: 74mm;&#10;  height: 0.99mm;&#10;  padding: 0.5mm 0.5mm 0.5mm 0.5mm;&#10;">
