--- a/pyhwp-tests/hwp5_tests/fixtures/textbox.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/textbox.html.d/index.formatted.xhtml
@@ -27,8 +27,8 @@
         <div class="Page">
           <p class="Normal parashape-1">&#13;</p>
           <div class="GShapeObjectControl" style="  width: 41.5mm;&#10;/* hrelto: paper halign: left*/  margin-left: 4.35mm;&#10;">
-            <p class="Normal"><span>그림 </span><span class="autonumbering autonumbering-picture">1</span><span> 캡션</span>&#13;</p>
-            <p class="Normal"><span>글상자</span>&#13;</p>
+            <p class="Normal"><span class="lang-ko">그림 </span><span class="autonumbering autonumbering-picture">1</span><span class="lang-ko"> 캡션</span>&#13;</p>
+            <p class="Normal"><span class="lang-ko">글상자</span>&#13;</p>
           </div>
         </div>
       </div>
